nxt days predication

--- a/stock.ipynb
+++ b/stock.ipynb
@@ -7,8 +7,8 @@
     "id": "SfyEUpen90Jm"
    },
    "source": [
-    "Description: artificial recurrent neural network, Long Short Term Memory (LSTM).\n",
-    "  Using 60 days stock price to predict the closing stock price of Apple."
+    "Description: artificial recurrent neural network, Long Short Term Memory (LSTM).<br>\n",
+    "&emsp;&emsp;Using (size) 60 days stock price to predict the closing stock price of Apple on (nxt) 7 day."
    ]
   },
   {
@@ -73,7 +73,7 @@
    },
    "source": [
     "# get the stock quote\n",
-    "df = web.DataReader('AAPL', data_source='yahoo', start='2012-01-01', end='2019-12-17')\n",
+    "df = web.DataReader('AAPL', data_source='yahoo', start='2009-01-01', end='2019-12-17')\n",
     "df"
    ]
   },
@@ -83,9 +83,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_yahoo_hist_df('AAPL', start_str='2012-01-01')\n",
+    "df = get_yahoo_hist_df('AAPL', start_str='2009-01-01')\n",
     "df['Date'] = pd.to_datetime(df['Date'], format=DATETIME_FORMAT)\n",
-    "df.head(3)"
+    "actual_df = df[['Date', 'Close']]"
    ]
   },
   {
@@ -116,10 +116,27 @@
     "# visualize\n",
     "plt.figure(figsize = (16, 8))\n",
     "plt.title('Close Price History')\n",
-    "plt.plot(df['Close'])\n",
+    "plt.plot(actual_df['Date'], actual_df['Close'])\n",
     "plt.xlabel('Date', fontsize=18)\n",
     "plt.ylabel('Close Price', fontsize=18)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "Z5JxjpINt6Aj"
+   },
+   "outputs": [],
+   "source": [
+    "# use size days data, to predict nxt day's price.\n",
+    "# 60, 1 => 60 days price, to predict 61th day price.\n",
+    "# 60, 7 => same 60 days price, to predict 67th day price.\n",
+    "size = 60\n",
+    "nxt = 10"
    ]
   },
   {
@@ -151,36 +168,6 @@
     "data = df.filter(['Close'])\n",
     "# convert to numpy array\n",
     "dataset = data.values\n",
-    "# the number of rows to train the model\n",
-    "training_data_len = math.ceil(len(dataset) * 0.8)\n",
-    "training_data_len"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 136
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 3337,
-     "status": "ok",
-     "timestamp": 1589770802980,
-     "user": {
-      "displayName": "Chang Liu",
-      "photoUrl": "",
-      "userId": "09036893343136739270"
-     },
-     "user_tz": 420
-    },
-    "id": "HdaGCMo5AfTa",
-    "outputId": "a7a773ae-7ba9-48af-f313-2e666a7dfd8f"
-   },
-   "outputs": [],
-   "source": [
     "# scale the data\n",
     "scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "scaled_data = scaler.fit_transform(dataset)\n",
@@ -190,14 +177,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Z5JxjpINt6Aj"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "size = 60"
+    "# the number of rows to train the model\n",
+    "# training_data_len = math.ceil(len(dataset) * 0.8)\n",
+    "training_data_len = len(dataset) - 200\n",
+    "print(f'training_data={training_data_len}, size={size}, next={nxt}')\n",
+    "if (training_data_len + size + nxt >= len(dataset)):\n",
+    "    raise SystemExit('dataset is too small !!!')"
    ]
   },
   {
@@ -211,14 +199,12 @@
    "outputs": [],
    "source": [
     "# create the training dataset\n",
-    "train_data = scaled_data[0:training_data_len, :]\n",
-    "\n",
     "# split into x_train and y_train\n",
     "x_train = []\n",
     "y_train = []\n",
-    "for i in range(size, len(train_data)):\n",
-    "    x_train.append(train_data[i - size : i, 0])\n",
-    "    y_train.append(train_data[i, 0])"
+    "for i in range(size, training_data_len):\n",
+    "    x_train.append(scaled_data[i - size : i, 0])\n",
+    "    y_train.append(scaled_data[i + (nxt - 1), 0])"
    ]
   },
   {
@@ -353,7 +339,38 @@
    "source": [
     "# train the model\n",
     "# this takes a long long time.\n",
-    "model.fit(x_train, y_train, batch_size=1, epochs=1)"
+    "# model.fit(x_train, y_train, batch_size=1, epochs=1)\n",
+    "model.fit(x_train, y_train, epochs=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## done model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the predicted values\n",
+    "predictions = model.predict(x_train)\n",
+    "predictions = scaler.inverse_transform(predictions)\n",
+    "train_df = pd.DataFrame(predictions, columns=['Train'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.DataFrame(predictions, columns=['TrainData'])\n",
+    "train_df['Date'] = actual_df['Date'].iloc[size:size + train_df.shape[0]].values\n",
+    "train_df.head(3)"
    ]
   },
   {
@@ -367,11 +384,13 @@
    "outputs": [],
    "source": [
     "# testing dataset\n",
-    "test_data = scaled_data[training_data_len - size : , :]\n",
+    "# fill future y_test with last valid one \n",
     "x_test = []\n",
-    "y_test = dataset[training_data_len : , :]\n",
-    "for i in range(60, len(test_data)):\n",
-    "    x_test.append(test_data[i - size : i, 0])\n"
+    "y_test = []\n",
+    "y_date_len = len(scaled_data) - (nxt - 1)\n",
+    "for i in range(training_data_len, y_date_len):\n",
+    "    x_test.append(scaled_data[i - size : i, 0])\n",
+    "    y_test.append(scaled_data[i + (nxt - 1), 0])"
    ]
   },
   {
@@ -408,6 +427,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.DataFrame(predictions, columns=['TestData'])\n",
+    "test_df['Date'] = actual_df['Date'].iloc[training_data_len + nxt - 1 : ].values\n",
+    "test_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -439,6 +469,87 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_delta_df = pd.merge(actual_df, train_df, on='Date')\n",
+    "train_delta_df['TrainDelta'] = train_delta_df.apply(lambda row: row['TrainData'] - row['Close'], axis='columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_delta_df = pd.merge(actual_df, test_df, on='Date')\n",
+    "test_delta_df['TestDelta'] = test_delta_df.apply(lambda row: row['TestData'] - row['Close'], axis='columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize\n",
+    "plt.figure(figsize=(16, 8))\n",
+    "plt.title('Model')\n",
+    "plt.xlabel('Date', fontsize=18)\n",
+    "plt.ylabel('Close Price', fontsize = 18)\n",
+    "plt.plot(actual_df['Date'], actual_df['Close'])\n",
+    "plt.plot(train_df['Date'], train_df['TrainData'])\n",
+    "plt.plot(test_df['Date'], test_df['TestData'])\n",
+    "plt.plot(test_delta_df['Date'], test_delta_df['TestDelta'])\n",
+    "plt.legend(['Actual', 'Train', 'Test', 'TestDelat'], loc='upper left')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize\n",
+    "title = str(nxt) + ' Trading Days Predication'\n",
+    "plt.figure(figsize=(16, 8))\n",
+    "plt.title(title)\n",
+    "plt.xlabel('Date', fontsize=18)\n",
+    "plt.ylabel('Delta', fontsize = 18)\n",
+    "plt.plot(test_delta_df['Date'], test_delta_df['Close'])\n",
+    "plt.plot(test_delta_df['Date'], test_delta_df['TestData'])\n",
+    "plt.plot(test_delta_df['Date'], test_delta_df['TestDelta'])\n",
+    "plt.legend(['Close', 'TestData', 'TestDelta'], loc='upper left')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_delta_df"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Visualize\n",
+    "plt.figure(figsize=(16, 8))\n",
+    "plt.title('Model Delta')\n",
+    "plt.xlabel('Date', fontsize=18)\n",
+    "plt.ylabel('Delta', fontsize = 18)\n",
+    "plt.plot(train_delta_df['Date'], train_delta_df['TrainDelta'])\n",
+    "plt.plot(test_delta_df['Date'], test_delta_df['TestDelta'])\n",
+    "plt.legend(['TrainDelta', 'TestDelta'], loc='lower right')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "raw",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -459,7 +570,6 @@
     "id": "9Ce-zT7OGtK2",
     "outputId": "38cbfd1f-882f-45a8-ff51-f53905d56504"
    },
-   "outputs": [],
    "source": [
     "# plot the data\n",
     "train = data[: training_data_len]\n",
